@startuml
class Person {
    + Namn : string <<get>> <<set>>
    + Mobil : string <<get>> <<set>>
    + <<virtual>> VisaInfo() : void
}
class Student {
    + Årskurs : string <<get>> <<set>>
    + Program : string <<get>> <<set>>
    + <<override>> VisaInfo() : void
}
class Lärare {
    + AnställningÅr : string <<get>> <<set>>
    + Ämnen : string <<get>> <<set>>
    + VisaInfoLärare() : void
}
Person <|-- Student
Person <|-- Lärare
@enduml
